# MegaEmu

./: .clang-format  .clang-tidy  .clangd  .cppcheck  .editorconfig  .gitattributes  .gitconfig  .gitignore  .gitmessage  .markdownlint.json  .pre-commit-config.yaml  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  Mega_Emu.code-workspace  PROMPT_WORK.md  README.md  ROADMAP.md  build.sh  codecov.yml  config.json  install_log.txt  package-lock.json  sonar-project.properties  validation_results.md  vcpkg.json
resources/tests/: CMakeLists.txt  nes_test.cpp
src/: CMakeLists.txt  begin_code.h  close_code.h  config.h  cpp_to_c_bridge.cpp  dirent.h  main.c  main.cpp  pch.h.in  test_nes_build.cmake  version.hpp.in
src/audio/: audio_system.hpp
src/core/: CMakeLists.txt  config.c  config.h  config_system.hpp  core.c  core.h  core_types.h  delta_compression.c  docs.h  error.h  factory.cpp  global_defines.h  input_config.c  input_config.h  performance.c  performance.h  platform.hpp  platform_config.h  rewind_buffer.c  rewind_buffer.h  rom_loader.cpp  rom_loader.h  rom_system.cpp  rom_system.hpp  save_state.c  save_state.h  save_state_cloud.h  save_state_crypto.c  save_state_crypto.h  thumbnail_generator.c  user_profile.c  user_profile.h
src/core/api/: mega_emu_api.h
src/core/audio/: CMakeLists.txt  apu_nes.h  audio.c  audio.h  audio_interface.h  sn76489.h  ym2612.h
src/core/audio_control/: audio_control.c  audio_control.h  audio_control_types.h
src/core/cartridge/: cartridge_interface.h
src/core/cheat/: cheat.c  cheat.h  cheat_types.h
src/core/common/: CMakeLists.txt
src/core/config/: CMakeLists.txt  config.c  config_interface.h  config_validator.c  config_validator.h
src/core/cpu/: CMakeLists.txt  cpu.c  cpu.h  cpu_common.c  cpu_interface.h  m68k.h  r6502.h  z80.h
src/core/events/: CMakeLists.txt  event_dispatcher.c  event_logger.c  event_logger.h  events.c  events_enhanced.c  events_enhanced.h  events_interface.h  node_events.c  node_events.h  priority_queue.c  priority_queue.h
src/core/input/: CMakeLists.txt  input.c  input.h  input_config.c  input_config.h  input_config_interface.h  input_config_struct.h  input_config_types.h  input_interface.h
src/core/interfaces/: CMakeLists.txt  audio_interface.h  config_interface.h  controller_interface.h  core_interfaces.h  cpu_interface.h  events_interface.h  input_config_interface.h  input_interface.h  memory_interface.h  platform_interface.h  ppu_interface.h  state_interface.h  system_interface.h  timer_interface.h  video_interface.h
src/core/logging/: enhanced_logger.h
src/core/memory/: CMakeLists.txt  memory.c  memory.h  memory_cache.c  memory_cache.h  memory_interface.c  memory_interface.h  memory_optimization.c  memory_optimization.h  optimized_memory.h
src/core/monitoring/: advanced_metrics.h
src/core/network/: node_communication.h
src/core/optimization/: resource_optimizer.h
src/core/performance/: CMakeLists.txt  performance.c  performance.h
src/core/platform/: platform_detector.c  platform_detector.h
src/core/plugins/: plugin_system.h
src/core/private/: component_manager.c
src/core/public/: component_interfaces.h
src/core/rom_db/: CMakeLists.txt  rom_db.c  rom_db.h  rom_db_entry.c  rom_db_hash.c  rom_db_io.c  rom_db_types.h  rom_db_utils.c
src/core/state/: CMakeLists.txt  save_state.c  save_state.h  state.c  state_interface.c  state_interface.h  state_interface_test.c
src/core/turbo/: turbo.c  turbo.h  turbo_types.h
src/core/video/: CMakeLists.txt  ppu.c  ppu.h  ppu_interface.h  ppu_nes.h  vdp_md.h  vdp_sms.h  video.c  video.h  video_common.c  video_interface.h
src/dirent/: dirent.h
src/examples/: CMakeLists.txt  nes_test.c  rom_db_example.c
src/examples/gui_demo/: build.bat  gui_demo.c
src/frontend/: CMakeLists.txt  console_types.h  gui_element.c  gui_element.h  gui_includes.h  gui_manager.c  gui_manager.h  gui_manager_cpp_bridge.c  gui_manager_cpp_bridge.cpp  gui_manager_cpp_bridge.h  gui_rom_selector.c  gui_rom_selector.h  gui_save_state.c  gui_save_state.h  gui_types.h  menu_system.hpp  render_system.cpp  render_system.hpp  test_rom_selector.c  window.hpp
src/frontend/audio/: CMakeLists.txt  menu_sounds.c  menu_sounds.h
src/frontend/common/: CMakeLists.txt  frontend.c  frontend.h  frontend_common.c  frontend_config.c  frontend_config.h  frontend_internal.h  frontend_types.h
src/frontend/dashboard/: predictive_dashboard.h
src/frontend/gui/: CMakeLists.txt  advanced_widgets.h  anime_effects.c  anime_effects.h  anime_presets.c  batch_renderer.h  effects.c  effects.h  emu_effects.c  emu_effects.h  gui_common.c  gui_common.h  gui_element.h  gui_manager.c  (+23 more)
src/input/: input_system.hpp
src/tests/: CMakeLists.txt  nes_save_state_cloud_tests.c  nes_save_state_crypto_tests.c  save_state_cloud_tests.c  save_state_crypto_tests.c  test_enhanced_log.c  test_framebuffer.c  test_frontend.c  test_logging.c  test_megadrive_audio.c  test_megadrive_memory.c  test_megadrive_video.c  test_memory_safety.c  test_save_state.c  test_sdl_frontend.c  test_suite.c
src/tools/: CMakeLists.txt
src/utils/: CMakeLists.txt  common_types.h  config.h  enhanced_log.c  enhanced_log.h  error_codes.h  error_handling.c  error_handling.h  file_utils.c  file_utils.h  log_categories.c  log_categories.h  log_modules.h  log_utils.c  log_utils.h  md5.c  md5.h  mock_http.h  performance.h  platform_compat.h  save_state.c  save_state.h  validation_utils.h
src/video/: vdp.c  vdp.h
tests/: CMakeLists.txt
tests/audio/: CMakeLists.txt
tests/core/: test_config_system.cpp  test_event_system.cpp  test_memory_system.cpp
tests/cpu/: CMakeLists.txt  m68k_test.c  z80_compliance_test.c  z80_test.c  z80_test_conformance.c
tests/integration/: CMakeLists.txt
tests/memory/: CMakeLists.txt
tests/performance/: CMakeLists.txt
tests/save_state/: CMakeLists.txt  test_save_state.c  test_save_state_minimal.c  test_save_state_simple.c  test_save_state_standalone.c
tests/tools/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unity/: unity.c  unity.h  unity_internals.h
tests/video/: CMakeLists.txt
(+534 files in other folders)
